tests/Errors/Generic/Formatting/SpaceAfterCast/CommentFound.php
<?php

declare(strict_types=1);

$foo = 123;

echo (string) /* comment after cast */ $foo;
